# overseer

./: package.json  pnpm-lock.yaml
src/: app.css  app.html  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/inbound/: lcu_websocket_adapter.rs  lcu_websocket_client.rs  league_lockfile_provider.rs  mod.rs  no_cert_verification.rs
src-tauri/src/adapters/outbound/: data_dragon_api.rs  data_dragon_champion_resolver.rs  ingame_api_client.rs  lcu_api.rs  lcu_champion_banner.rs  lcu_champion_hoverer.rs  lcu_champion_picker.rs  league_lockfile_reader.rs  mod.rs  tauri_log_publisher.rs
src-tauri/src/application/: dev_flag.rs  league_lifetime_manager.rs  mod.rs  null_lcu_api.rs  tauri_commands.rs
src-tauri/src/application/features/: mod.rs
src-tauri/src/application/features/auto_pick_ban/: ban_pick_request.rs  champion_preferences.rs  feature.rs  mod.rs  priority_ban_strategy.rs  priority_pick_strategy.rs  subscriber.rs
src-tauri/src/application/features/ingame_log/: feature.rs  subscriber.rs
src-tauri/src/application/features/league_log/: feature.rs  mod.rs  subscriber.rs
src-tauri/src/application/features/match_ready/: feature.rs  subscriber.rs
src-tauri/src/domain/: delay_state.rs  events.rs  feature.rs  feature_manager.rs  feature_registry.rs  ingame_event_publisher.rs  lcu_socket_frame.rs  league_event_publisher.rs  log_entry.rs  mod.rs  ports.rs  registry.rs  rune_page.rs  rune_page_manager.rs
src-tauri/src/domain/champ_select/: ban_preferences.rs  decision.rs  mod.rs  models.rs
(+50 files in other folders)
