[package]
name = "overseer"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "overseer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde_json = "1"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tungstenite        = { version = "0.28", default-features = false, features = ["rustls-tls-webpki-roots"] }

rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
log = "0.4"
anyhow = "1.0.100"
futures-util = "0.3.31"
dirs = "6.0.0"
sysinfo = "0.37.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
dashmap = "7.0.0-rc2"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
tauri-plugin-store = "2.4.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
